--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "websockets-vanilla",
+  "name": "websockets-socket.io",
   "version": "1.0.0",
   "engines": {
     "node": "6.2.0"
@@ -13,9 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bufferutil": "1.2.1",
     "express": "4.13.4",
-    "utf-8-validate": "1.2.1",
-    "ws": "1.1.0"
+    "socket.io": "1.4.6"
   }
 }
